# Coding-Practice-and-Experiments

./: README.md
Experiments/Algorithms and Datastructures from Scratch/: CMakeLists.txt
Experiments/Computer Vision/: hello_world.py
Experiments/Embedded Systems/External Sort/: CMakeLists.txt  test_generate_data.cpp
Experiments/Embedded Systems/External Sort/include/: external-sort.h  generate_data.h  radix_sort.h  read_data.h
Experiments/Embedded Systems/External Sort/src/: external-sort.cpp  main.cpp
Experiments/Embedded Systems/External Sort/tests/: test_external_sort.cpp  test_generate_data.cpp
Experiments/Linear Algebra/src/: Matrix.py
Experiments/Machine Learning/: Scratch Work.ipynb
Practice/Cracking The Coding Interview/: README.md
Practice/Cracking The Coding Interview/Chapter One/: Cracking The Coding Interview Problems.ipynb
Practice/DataStructures/: README.md
Practice/DataStructures/DataStructures/Queue/: main.c
Practice/DataStructures/DataStructures/Stack/: ]  main.c  stack.h
Practice/DataStructures/Queue/: queue.c  queue.h  queue_test
Practice/DataStructures/SinglyLinkedList/: SLL_Test  main.c  singly_linked_list.c  singly_linked_list.h
Practice/DataStructures/Stack/: stack.c  stack_test
Practice/cmake-tests/: CMakeLists.txt  README.md
Practice/cmake-tests/include/: hello-world.h
Practice/cmake-tests/src/: hello-world.cpp  main.cpp
Practice/cmake-tests/tests/: test_hello-world.cpp
